fix wrong reference

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,7 +3,7 @@
 <head>
 <link rel="stylesheet" href="/roman/style.css">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta name="archive-path" content="/roman/.html" />
+<meta name="archive-path" content="/index.html" />
 <title></title></head>
 <body>
 <div class="navigation-container">
